Ingress/manifests/grafana-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability 
spec:
  ingressClassName: nginx
  rules:
    - host: observability.qubitera.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /grafana
            pathType: Prefix
