Ingress/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability 
spec:
  ingressClassName: nginx
  rules:
    - host: observability.qubitera.com
      http:
        paths:
          - backend:
            path: /
            pathType: Prefix
              service:
                name: prometheus-service
                port:
                  number: 8080
  tls:
    - hosts:
        - prometheus.apps.shaker242.lab
      secretName: prometheus-secret
